[package]
name = "compute_test"
version = "0.1.0"
authors = ["root"]

[dependencies]
winit = "=0.17.2"
image = "0.20"
log = "*"
env_logger = "*"
ansi_term = "*"
floating-duration = "*"
gfx-hal = "0.1.0"
gfx-backend-vulkan = "0.1.0"

[build-dependencies]
shaderc = "0.3"

[profile.release]
lto = true
